# libcbh

./: .gitignore  CMakeLists.txt  README.md  cbh.pc.in
gtest/: CMakeLists.txt  test_cbh_codec.cpp
gtest/Annotation/: TestBase.cba  TestBase.cbc  TestBase.cbg  TestBase.cbh  TestBase.cbj  TestBase.cbl  TestBase.cbm  TestBase.cbp  TestBase.cbs  TestBase.cbt  TestBase.cbtt  TestBase.cib  TestBase.cib2  TestBase.cit  TestBaseExport.pgn
gtest/Chess960Biel/: Chess960.ini  Chess960.pgn  Chess960Biel.cba  Chess960Biel.cbc  Chess960Biel.cbe  Chess960Biel.cbg  Chess960Biel.cbh  Chess960Biel.cbj  Chess960Biel.cbl  Chess960Biel.cbm  Chess960Biel.cbp  Chess960Biel.cbs  Chess960Biel.cbt  Chess960Biel.cbtt  Chess960Biel.cib  Chess960Biel.cib2  Chess960Biel.cit  Chess960Biel.cit2  Chess960Biel.ini
gtest/Chess960Corrupt/: Corrupt.cbc  Corrupt.cbg  Corrupt.cbh  Corrupt.cbj  Corrupt.cbp  Corrupt.cbs  Corrupt.cbt  Corrupt.cbtt  Corrupt.cib  Corrupt.cit  Corrupt.ini  Corrupt960.pgn
gtest/Chess960NonStandard/: Chess960NonStandard.cba  Chess960NonStandard.cbc  Chess960NonStandard.cbg  Chess960NonStandard.cbh  Chess960NonStandard.cbj  Chess960NonStandard.cbl  Chess960NonStandard.cbm  Chess960NonStandard.cbp  Chess960NonStandard.cbs  Chess960NonStandard.cbt  Chess960NonStandard.cbtt  Chess960NonStandard.cib  Chess960NonStandard.cib2  Chess960NonStandard.cit  Chess960NonStandard.ini  Chess960NonStandardStart.ini  Chess960NonStandardStart.pgn
gtest/ManyPromotions/: ManyPromotions.cbc  ManyPromotions.cbg  ManyPromotions.cbh  ManyPromotions.cbj  ManyPromotions.cbp  ManyPromotions.cbs  ManyPromotions.cbt  ManyPromotions.cbtt  ManyPromotions.cib  ManyPromotions.cit  ManyPromotions.ini  Promotions.pgn
gtest/NonStandard/: NonStandardStart.cba  NonStandardStart.cbc  NonStandardStart.cbg  NonStandardStart.cbh  NonStandardStart.cbj  NonStandardStart.cbl  NonStandardStart.cbm  NonStandardStart.cbp  NonStandardStart.cbs  NonStandardStart.cbt  NonStandardStart.cbtt  NonStandardStart.cib  NonStandardStart.cib2  NonStandardStart.cit  NonStandardStart.ini  NonStandardStart.pgn
gtest/NormalGames/: BielMTO.cba  BielMTO.cbc  BielMTO.cbe  BielMTO.cbg  BielMTO.cbh  BielMTO.cbj  BielMTO.cbl  BielMTO.cbm  BielMTO.cbp  BielMTO.cbs  BielMTO.cbt  BielMTO.cbtt  BielMTO.cib  BielMTO.cib2  BielMTO.cit  BielMTO.cit2  BielMTO.ini  BielMTO.pgn
gtest/NormalNoPop/: StandardMissingPop.cbc  StandardMissingPop.cbg  StandardMissingPop.cbh  StandardMissingPop.cbj  StandardMissingPop.cbm  StandardMissingPop.cbp  StandardMissingPop.cbs  StandardMissingPop.cbt  StandardMissingPop.cbtt  StandardMissingPop.cib  StandardMissingPop.cit  StandardMissingPop.ini  StandardNoPop.pgn
gtest/UnusualStart/: UnusualStart.pgn  UnusualStartBytes.cbc  UnusualStartBytes.cbe  UnusualStartBytes.cbg  UnusualStartBytes.cbh  UnusualStartBytes.cbj  UnusualStartBytes.cbm  UnusualStartBytes.cbp  UnusualStartBytes.cbs  UnusualStartBytes.cbt  UnusualStartBytes.cbtt  UnusualStartBytes.cib  UnusualStartBytes.cit  UnusualStartBytes.ini
gtest/WithVariations/: WithVariations.cba  WithVariations.cbc  WithVariations.cbg  WithVariations.cbh  WithVariations.cbj  WithVariations.cbl  WithVariations.cbm  WithVariations.cbp  WithVariations.cbs  WithVariations.cbt  WithVariations.cbtt  WithVariations.cib  WithVariations.cib2  WithVariations.cit  WithVariations.cit2  WithVariations.ini
include/: cbh.h  error.h  interface.h  nags.h
src/: board_def.h  cbh_codec.cpp  cbh_codec.h  cbh_decode_annotation.cpp  cbh_decode_annotation.h  cbh_decode_annotator.cpp  cbh_decode_annotator.h  cbh_decode_base.h  cbh_decode_game.cpp  cbh_decode_game.h  cbh_decode_player.cpp  cbh_decode_player.h  cbh_decode_source.cpp  cbh_decode_source.h  cbh_decode_tournament.cpp  cbh_decode_tournament.h  cbh_position.cpp  cbh_position.h  codec_cbh.cpp  codec_cbh.h  common.h  date.h  error.h  filebuf.h  game.cpp  game.h  hash.h  main.cpp  mapping.h  movelist.h  movetree.h  position.cpp  position.h  sqmove.h
